# CSSMALG

./: .gitignore  README.md  benchmark_arrived.py  benchmark_single_arrived.py  vertexFreq.py
code/: .gitignore  CMakeLists.txt  README.md  agents-input-json-spec.md  map-input-json-spec.md  sim-output-json-spec.md  to_be_sim.md
code/BashScriptGenerator/: README.md  generator.py
code/DataVisualization/: README.md  boxPlot.py  database.py  formulas.md  ingest.py  linePlot.py  mongo_api.py  quick_stats.py  setup_mongo.md  visualize.py  visualizer.py  visualizer_agents.py
code/MapCreation/: MapCreationWebServer.py  README.md  index.html  simulation.md  stupid_serve.py  todo.md
code/MapCreation/css/: widescreen.css
code/MapCreation/js/: agent.js  animate.js  config.js  drawing.js  grid.js  interface.js  intersection.js  loading.js  main.js  map.js  road.js  simulation.js  utils.js
code/Parsing/: README.md
code/Parsing/data/: export.json  export.tsim  importMapData.json  mapExport.tsim  nodes.json  streets.json  tinyMapExport.tsim
code/Parsing/data/0_percentBikes/: tiny_sim_0.json  tiny_sim_1.json  tiny_sim_2.json  tiny_sim_3.json  tiny_sim_4.json  tiny_sim_5.json  tiny_sim_6.json  tiny_sim_7.json  tiny_sim_8.json  tiny_sim_9.json
code/Parsing/data/10_percentBikes/: tiny_sim_0.json  tiny_sim_1.json  tiny_sim_2.json  tiny_sim_3.json  tiny_sim_4.json  tiny_sim_5.json  tiny_sim_6.json  tiny_sim_7.json  tiny_sim_8.json  tiny_sim_9.json
code/Parsing/data/12_percentBikes/: tiny_sim_0.json  tiny_sim_1.json  tiny_sim_2.json  tiny_sim_3.json  tiny_sim_4.json  tiny_sim_5.json  tiny_sim_6.json  tiny_sim_7.json  tiny_sim_8.json  tiny_sim_9.json
code/Parsing/data/14_percentBikes/: tiny_sim_0.json  tiny_sim_1.json  tiny_sim_2.json  tiny_sim_3.json  tiny_sim_4.json  tiny_sim_5.json  tiny_sim_6.json  tiny_sim_7.json  tiny_sim_8.json  tiny_sim_9.json
code/Parsing/data/16_percentBikes/: tiny_sim_0.json  tiny_sim_1.json  tiny_sim_2.json  tiny_sim_3.json  tiny_sim_4.json  tiny_sim_5.json  tiny_sim_6.json  tiny_sim_7.json  tiny_sim_8.json  tiny_sim_9.json
code/Parsing/data/18_percentBikes/: tiny_sim_0.json  tiny_sim_1.json  tiny_sim_2.json  tiny_sim_3.json  tiny_sim_4.json  tiny_sim_5.json  tiny_sim_6.json  tiny_sim_7.json  tiny_sim_8.json  tiny_sim_9.json
code/Parsing/data/20_percentBikes/: tiny_sim_0.json  tiny_sim_1.json  tiny_sim_2.json  tiny_sim_3.json  tiny_sim_4.json  tiny_sim_5.json  tiny_sim_6.json  tiny_sim_7.json  tiny_sim_8.json  tiny_sim_9.json
code/Parsing/data/2_percentBikes/: tiny_sim_0.json  tiny_sim_1.json  tiny_sim_2.json  tiny_sim_3.json  tiny_sim_4.json  tiny_sim_5.json  tiny_sim_6.json  tiny_sim_7.json  tiny_sim_8.json  tiny_sim_9.json
code/Parsing/data/4_percentBikes/: tiny_sim_0.json  tiny_sim_1.json  tiny_sim_2.json  tiny_sim_3.json  tiny_sim_4.json  tiny_sim_5.json  tiny_sim_6.json  tiny_sim_7.json  tiny_sim_8.json  tiny_sim_9.json
code/Parsing/data/6_percentBikes/: tiny_sim_0.json  tiny_sim_1.json  tiny_sim_2.json  tiny_sim_3.json  tiny_sim_4.json  tiny_sim_5.json  tiny_sim_6.json  tiny_sim_7.json  tiny_sim_8.json  tiny_sim_9.json
code/Parsing/data/8_percentBikes/: tiny_sim_0.json  (+9 more)
code/Parsing/src/: AgentGenerator.php  Parser.php  main.php  temporaryCaster.py
code/Simulation/: .gitignore  2022-11-04_13-40-34.json  3_intersection.map  5_cars_simulation.sim  CMakeLists.txt  GenerateBatchFiles.py  README.md  ToDo.md  dependancies.md  example.json  test.sim
code/Simulation/include/: actors.hpp  base64.hpp  fastFW.cuh  helpers.hpp  io.hpp  routing.hpp  update.hpp  utils.hpp
code/Simulation/scripts/: GenerateBatchFiles.py  bestStatsDebug.py  getArrivedAgents.py  tsimTrafficGenerator.py  vertex_freq.py
code/Simulation/specs/: agents-input-json-spec.md  sim-output-json-spec.md
code/Simulation/src/: GenerateAgents.cpp  PrecalculateSPT.cpp  Simulate.cpp  Visualize.cpp  base64.cpp  export.cpp  fastFW.cu  helpers.cpp  io.cpp  largeSim.cpp  main.cpp  routing.cpp  update.cpp  utils.cpp
code/include/: actors.hpp  routing.hpp
code/src/: actors.cpp  main.cpp
doc/: README.md
doc/Report/: Abstract.tex  ETHlogo.eps  bibliography.bib  cover.tex  description.tex  implementation.tex  individual contributions.tex  introduction.tex  main.tex  results.tex  summary.tex
other/Map Samples/: Large_Map.tsim  mapWithUnreachableIntersections.tsim  small.tsim
other/memes/: README.md
other/simulations/: 2022-11-23_11-07-00.sim
presentation/: README.md
presentation/presentation/: Model.tex  Motivationss.tex  Outlooks.tex  Related Works.tex  bibliography.bib  main.tex  results.tex
presentation/presentation/sleektheme/: section_pages.tex  title_page.tex
videos/memes/: README.md
